--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-  "name": "Amazon SES build",
+  "name": "amazon-ses-build",
   "version": "1.0.0",
+  "engines": {
+    "node": "14.x"
+  },
   "description": "",
   "main": "server.js",
   "scripts": {
